Add axes titles

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
             vizElement.parentNode.insertBefore(scriptElement, vizElement);
         </script>
-        <figcaption class="caption" style="color: white; width: 83%">Data Source <a href="https://www.ons.gov.uk/businessindustryandtrade/retailindustry/timeseries/j4mc/drsi">Office of National Statistics</a>
+        <figcaption class="caption" style="color: white; width: 83%">Data Source <a href="https://ec.europa.eu/eurostat/databrowser/view/ISOC_EC_IB20__custom_545732/bookmark/table?lang=en&bookmarkId=fc2a54a0-1c03-440a-a9bc-5ec061d1a031">Eurostat Data Browser</a>
         </figcaption>
 
         <div id="textbox2" style="border-color: #FA3C3C;text-align:justify;">
@@ -70,7 +70,7 @@
 
             </section>
         </main>
-        <figcaption class="caption" style="color: black; text-align:center; margin-left: 100px;">Data Source <a href="https://www.ons.gov.uk/businessindustryandtrade/retailindustry/timeseries/j4mc/drsi">Office of National Statistics</a>
+        <figcaption class="caption" style="color: black; text-align:center; margin-left: 100px;">Data Source <a href="https://www.ons.gov.uk/peoplepopulationandcommunity/householdcharacteristics/homeinternetandsocialmediausage/datasets/internetaccesshouseholdsandindividualsreferencetables">Office of National Statistics</a>
         </figcaption>
         <div id="textbox" style="color: black; border-color:#6BB1CC;margin-bottom: 40px;">
             <i class="far fa-lightbulb" style="float: right;margin-top:-15px;margin-right:-10px;"></i>
@@ -213,9 +213,13 @@
                         </tr>
                     </tbody>
                 </table>
+                <figcaption class="caption" style="color: black; text-align:center;">Data Source <a href="https://www.statista.com/forecasts/870307/united-kingdom-top-online-stores-united-kingdom-ecommercedb">Statista</a>
+                </figcaption>
             </div>
             <div class="column2 reveal">
                 <h1 style="margin-bottom: 35px;color:black;font-size: 25px;">What online products did UK customers purchase in 2020?</h1>
+                <div style="width: 80%;margin-left:auto;margin-right:auto;margin-top:20px;margin-bottom:20px;">Here are the <span style="font-weight: bold; color:#6BB1CC">most purchased online products</span>, based on the annual interview of Office for National Statistics for 2020.</div>
+
                 <section class="bar-graph bar-graph-horizontal bar-graph-one reeveal" style="margin-left: 20%;">
                     <div class="bar-one">
                         <a>
@@ -291,7 +295,10 @@
                     </div>
                 </section>
             </div>
+            <figcaption class="caption" style="color: black; text-align:center; margin-left: 100px;">Data Source <a href="https://www.statista.com/statistics/275973/types-of-goods-purchased-online-in-great-britain/">Statista</a>
+            </figcaption>
         </div>
+
 
         <div id="textbox" class="reveal" style="color: black; border-color:#6BB1CC;">
             <i class="far fa-lightbulb" style="float: right;margin-top:-15px;margin-right:-10px;"></i>
@@ -330,6 +337,8 @@
         <div class="wrapper">
             <canvas id="stacked-chart"></canvas>
         </div>
+        <figcaption class="caption" style="color: black; text-align:center; margin-left: 100px;">Data Source <a href="https://www.ons.gov.uk/businessindustryandtrade/retailindustry/timeseries/j4mc/drsi">Office of National Statistics</a>
+        </figcaption>
 
         <div id="textbox2" style="border-color: #37A37E; color:black;">
             <i class="far fa-lightbulb" style="float: right;margin-top:-15px;margin-right:-10px;color: #37A37E;"></i> Online’s share of total retail sales has steadily been on the rise, reaching a <span style="color: #37A37E;font-weight:bold; font-size:17px;">climax of 19.2%</span>            in February of 2020, according to ONS Statistics. That’s up from 18% in 2019 and 16.3% in 2018. Note that those are <span style="font-weight: bold;font-size:17px">pre-pandemic collected data</span>, which help us get a objectve point of view.
@@ -348,7 +357,7 @@
             <div class="row">
                 <h1 style="color: black; font-size:25px;margin-bottom:30px;">Comparing growth:<span style="color: #5690A6;"> Internet sales</span> vs. Total retail year-on-year changes (%)</h1>
                 <canvas id="lineChart"></canvas>
-                <figcaption class="caption">Data Source <a href="https://www.ons.gov.uk/businessindustryandtrade/retailindustry/timeseries/j4mc/drsi">Office of National Statistics</a>
+                <figcaption class="caption">Data Source <a href="https://www.ons.gov.uk/businessindustryandtrade/retailindustry/timeseries/je2j">Office of National Statistics</a>
                 </figcaption>
 
             </div>
@@ -379,6 +388,8 @@
             <div class="wrapper">
                 <canvas id="stacked-chart-future"></canvas>
             </div>
+            <figcaption class="caption" style="color: black; text-align:center; margin-left: 100px;">Data Source <a style="color: white;" href="https://www.statista.com/statistics/285978/e-commerce-share-of-retail-sales-in-the-united-kingdom-uk/">Statista</a>
+            </figcaption>
 
             <div id="textbox2" style="background-color: rgba(29, 26, 26, 0.5);">
                 <i class="far fa-lightbulb" style="float: right;margin-top:-15px;margin-right:-10px;"></i> Online’s share of total retail sales is estimated to <span style="color: #37A37E;font-weight:bold; font-size:17px;">continue increasing</span> for
@@ -395,7 +406,7 @@
                     <div class="wrapper">
                         <canvas id="bar-chart-future"></canvas>
                     </div>
-                    <figcaption class="caption">Data Source <a href="https://www.ons.gov.uk/businessindustryandtrade/retailindustry/timeseries/j4mc/drsi">Office of National Statistics</a>
+                    <figcaption class="caption" style="color: black; text-align:center; margin-left: 100px;">Data Source <a style="color: white;" href="https://www.statista.com/forecasts/477091/e-commerce-revenue-forecast-in-the-united-kingdom">Statista</a>
                     </figcaption>
 
                 </div>
@@ -453,7 +464,7 @@
                 scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
                 vizElement.parentNode.insertBefore(scriptElement, vizElement);
             </script>
-            <figcaption class="caption" style="color: black; text-align:center; margin-left: 100px;">Data Source <a href="https://www.ons.gov.uk/businessindustryandtrade/retailindustry/timeseries/j4mc/drsi">Office of National Statistics</a>
+            <figcaption class="caption" style="color: black; text-align:center; margin-left: 100px;">Data Source <a href="https://www.ons.gov.uk/businessindustryandtrade/retailindustry/bulletins/retailsales/september2021">Office of National Statistics</a>
             </figcaption>
             <div id="textbox" style="color: black; border-color:#6BB1CC;margin-bottom: 40px;">
                 <i class="far fa-lightbulb" style="float: right;margin-top:-15px;margin-right:-10px;"></i> It can be observed from the graph that even during the Covid-19 era that we are currently in, even now when retailing is underperforming and it’s
@@ -469,7 +480,7 @@
             <i style="font-size:50px; margin-left:auto;margin-right:auto; display:block;color:black;" class="fas fa-chevron-down reveal"></i>
             <div class="box reveal" style="margin-left:auto; margin-right:auto;width:55%; font-weight: bold; font-size:25px;color:#6BB1CC;">
                 But have online clothing sales what it takes to surpass in-store sales?
-                <div style='font-style: italic;font-weight:400;font-size:18px;color:black;margin-top:20px'>Let’s dive even deeper into online clothing sector, to investigate whether the potential is there, according to estimations and statistics.</div>
+                <div style='font-style: italic;font-weight:400;font-size:18px;color:black;margin-top:20px'>Let’s dive even deeper into online clothing sector, to investigate whether the potential is there, according to estimations about the percentage of online over the total cothing sales.</div>
 
             </div>
 
@@ -486,8 +497,7 @@
 
 
             <div id="textbox2" class="reveal" style=" border-color:#6BB1CC;  margin-top:270px;margin-bottom: 40px; color:black;">
-                <i class="far fa-lightbulb" style="float: right;margin-top:-15px;margin-right:-10px;color:#6BB1CC;"></i> United Kingdom will become the <span style="font-weight: bold;color:#6BB1CC; font-size:17px;">first European country to record online clothing sales overtaking in-store sales </span>                in 2022, three years earlier than excpected, according to the Future of the European Apparel Industry report. The next European country that is estimated to achieve something similar is Netherlands in 2025, when 52% of all clothing sales
-                are expected to take place online.
+                <i class="far fa-lightbulb" style="float: right;margin-top:-15px;margin-right:-10px;color:#6BB1CC;"></i> United Kingdom will become the <span style="font-weight: bold;color:#6BB1CC; font-size:17px;">first European country to record online clothing sales overtaking in-store sales </span>                in 2022, three years earlier than excpected, according to the <a style="color: black;font-style:none;" href="https://www.retaileconomics.co.uk/retail-insights/thought-leadership-reports/future-of-retail-apparel-industry-eu-uk-and-evolution-of-physical-stores">Future of the European Apparel Industry report</a>                . The next European country that is estimated to achieve something similar is Netherlands in 2025, when 52% of all clothing sales are expected to take place online.
                 <span style="font-weight: bold; font-size:17px;"></span>
             </div>
 
@@ -548,6 +558,7 @@
         <script src="javascript/charts.js"></script>
         <script src="javascript/future-chart.js"></script>
         <script src="javascript/reveal.js"></script>
+
 
         <script>
             // Scroll to top button
