--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
         <h1 id="title">Comparing <span id="brick">Brick</span> and <span id="mortar">Mortar</span> </h1>
         <p class="subtitle"> <span>Could online sales take over retail one day?</span></p>
 
-
+        <p style="color: white;font-style: italic;font-weight:400;font-size:18px;margin-top:20px">Ecommerce has become increasingly important in our daily lives. Following the significant transition to online shopping in 2020, internet sales are expected to continue growing and increase their share over total retail worldwide. As we proceed,
+            we will explore online sales growth over the years in United Kingdom, and focus both on their comparison with the in-store retail market, and projections about the future.</p>
 
 
 
@@ -51,7 +52,7 @@
         </figcaption>
 
         <div id="textbox2" style="border-color: #FA3C3C;text-align:justify;">
-            <i class="far fa-lightbulb" style="float: right;margin-top:-15px;margin-right:-10px;color:#FA3C3C;"></i> <span style="font-weight: bold;">UK customers </span> are the <span style="font-weight: bold; color:#FA3C3C;">No.1 online spenders in Europe</span>            for 2020 by purchasing more online products (92) on average than any other country, according to Eurostat's survey on a sample of online shopping platforms' customers in 33 European Countries.
+            <i class="far fa-lightbulb" style="float: right;margin-top:-15px;margin-right:-10px;color:#FA3C3C;"></i> <span style="font-weight: bold;">UK customers </span> are the <span style="font-weight: bold; color:#FA3C3C;">No.1 online spenders in Europe</span>            for 2020 by purchasing more online products (92) on average than any other country, according to Eurostat's survey on a sample of online shopping customers in 33 European Countries.
         </div>
 
 
@@ -310,8 +311,7 @@
 
         <div id="textbox" class="reveal" style="color: black; border-color:#6BB1CC;">
             <i class="far fa-lightbulb" style="float: right;margin-top:-15px;margin-right:-10px;"></i>
-            <span style="font-weight: bold; font-size:17px;">Clothing</span> is the <span style="font-weight: bold;color:#6BB1CC; font-size:17px;">most common online purchase</span> by customers in UK, according to a survey taken by Office for National
-            Statistics in 2020.
+            <span style="font-weight: bold; font-size:17px;">Clothing</span> is the <span style="font-weight: bold;color:#6BB1CC; font-size:17px;">most common online purchase</span> by customers in UK, followed by online food deliveries.
         </div>
 
 
@@ -365,7 +365,7 @@
         <div id="textbox" style="color: black; border-color:#6BB1CC;margin-bottom: 40px;">
             <i class="far fa-lightbulb" style="float: right;margin-top:-15px;margin-right:-10px;color:#6BB1CC;"></i> The trend of both statistics imply maintaining this pattern in the future, proving that <span style="color: #5690A6;font-weight:bold; font-size:17px;"> online sales</span>            has the <span style="color: #5690A6;font-weight:bold; font-size:17px;"> potential to grow even bigger</span>, while <span style="color: #F5090A;font-weight:bold; font-size:17px;">  in-store sales</span> are estimated to <span style="color: #F5090A;font-weight:bold; font-size:17px;"> expand in a more conservative
             manner. </span> Additionally, it is shown that online sales growth reached a peak of 57.2% growth from 2019 to 2020 due to the pandemic’s outbreak, when all product purchases was required to take place online during lockdowns, followed by
-            a slight decline in growth for the first time since 2008, when things came back to normal.
+            a slight decline in growth for the first time since 2008, when things started coming back to normal.
             <span style="font-weight: bold; font-size:17px;"></span> <span style="font-weight: bold;color:#6BB1CC; font-size:17px;"></span>
 
         </div>
@@ -413,7 +413,7 @@
             </div>
             <div id="textbox2" style=" border-color:#6BB1CC;margin-bottom: 40px;background-color: rgba(29, 26, 26, 0.5);">
                 <i class="far fa-lightbulb" style="float: right;margin-top:-15px;margin-right:-10px;color:#6BB1CC;"></i> Since 2020 online sales has been on a non-stop rise and this trend is expected to continue until 2025. The <span style="font-weight: bold; font-size:17px;color:#6BB1CC;">estimated increase of roughly
-                    10%</span> from 97 to 119.1 billion dollars in a five year period shows a <span style="font-weight: bold;color:#6BB1CC; font-size:17px;">promising potential</span> in the field of online sales in United Kingdom.
+                    10% in revenue</span> from 97 to 119.1 billion dollars in a five year period shows a <span style="font-weight: bold;color:#6BB1CC; font-size:17px;">promising potential</span> in the field of online sales in United Kingdom.
                 <span style="font-weight: bold; font-size:17px;"></span>
 
             </div>
@@ -554,7 +554,7 @@
             <p style="color: white; opacity:0.5; padding-right:auto;padding-left:10px;position: absolute;bottom:0;">Antonis Poullis © 2022 | COMP6234 </p>
         </div>
 
-        <script src="javascript/donut_chart.js"></script>
+        <script src="javascript/charts_2.js"></script>
         <script src="javascript/charts.js"></script>
         <script src="javascript/future-chart.js"></script>
         <script src="javascript/reveal.js"></script>
